<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_mode"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:gravity="center_vertical"
    tools:context=".ui.userstats.UserStatsFragment">

    <LinearLayout
        android:id="@+id/Tier_image_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="@+id/top_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mmr_title">

        <ImageView
            android:id="@+id/tier_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/tier_image"
            tools:src="@tools:sample/avatars" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:shimmer_auto_start="true"
            app:shimmer_colored="false">

            <com.google.android.material.imageview.ShapeableImageView
                style="@style/Theme.ERBSStats.Loading"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="8dp"
                android:adjustViewBounds="true"
                app:shapeAppearanceOverlay="@style/Theme.ERBSStats.ShapeAppearanceOverlay.Shimmer.All"
                app:strokeColor="@color/goldenrod" />

        </com.facebook.shimmer.ShimmerFrameLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/mmr_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/mmr"
        app:layout_constraintStart_toEndOf="@+id/Tier_image_container"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mmr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/mmr_title"
        app:layout_constraintTop_toTopOf="@+id/mmr_title"
        tools:text="555" />

    <TextView
        android:id="@+id/rank_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/rank"
        app:layout_constraintStart_toEndOf="@+id/Tier_image_container"
        app:layout_constraintTop_toBottomOf="@+id/mmr_title" />

    <TextView
        android:id="@+id/rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/rank_title"
        app:layout_constraintTop_toTopOf="@+id/rank_title"
        tools:text="1" />

    <TextView
        android:id="@+id/top_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/top"
        app:layout_constraintStart_toEndOf="@+id/Tier_image_container"
        app:layout_constraintTop_toBottomOf="@+id/rank_title" />

    <TextView
        android:id="@+id/top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/top_title"
        app:layout_constraintTop_toTopOf="@+id/top_title"
        tools:text="0.1" />

    <TextView
        android:id="@+id/team_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Solo" />

    <LinearLayout
        android:id="@+id/parameters"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_title"
        tools:context=".ui.userstats.UserStatsFragment" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parameters" />

</androidx.constraintlayout.widget.ConstraintLayout>