<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/common"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/server"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/octothorpe" />

            <TextView
                android:id="@+id/game_rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                tools:text="1" />

            <TextView
                android:id="@+id/team_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                tools:text="mode" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                tools:text="@sample/usergames.json/userGames/startDtm" />

        </LinearLayout>

        <TextView
            android:id="@+id/server"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/common"
            app:layout_constraintTop_toTopOf="@+id/common"
            tools:text="@sample/usergames.json/userGames/serverName" />

        <FrameLayout
            android:id="@+id/avatar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/common"
            app:layout_constraintTop_toBottomOf="@+id/common">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/character"
                style="@style/Theme.ERBSStats.SmallImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="start|top"
                app:shapeAppearanceOverlay="@style/Theme.ERBSStats.ShapeAppearanceOverlay.SmallImage"
                tools:srcCompat="@tools:sample/avatars" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/loading_character"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:visibility="gone"
                app:shimmer_auto_start="true"
                app:shimmer_colored="false">

                <com.google.android.material.imageview.ShapeableImageView
                    style="@style/Theme.ERBSStats.Loading"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:shapeAppearanceOverlay="@style/Theme.ERBSStats.ShapeAppearanceOverlay.Shimmer.SmallImage"
                    app:strokeColor="@color/goldenrod" />

            </com.facebook.shimmer.ShimmerFrameLayout>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/character_weapon"
                style="@style/Theme.ERBSStats.SmallImage"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="end|bottom"
                app:shapeAppearanceOverlay="@style/Theme.ERBSStats.ShapeAppearanceOverlay.SmallImage"
                tools:srcCompat="@tools:sample/avatars" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/loading_character_weapon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:visibility="gone"
                app:shimmer_auto_start="true"
                app:shimmer_colored="false">

                <com.google.android.material.imageview.ShapeableImageView
                    style="@style/Theme.ERBSStats.Loading"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:shapeAppearanceOverlay="@style/Theme.ERBSStats.ShapeAppearanceOverlay.Shimmer.SmallImage"
                    app:strokeColor="@color/goldenrod" />

            </com.facebook.shimmer.ShimmerFrameLayout>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/indicators"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:orientation="horizontal"

            app:layout_constraintBottom_toBottomOf="@+id/avatar"
            app:layout_constraintEnd_toEndOf="@+id/server"
            app:layout_constraintStart_toEndOf="@+id/avatar"
            app:layout_constraintTop_toTopOf="@+id/avatar">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/kills_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kills_title" />

                <TextView
                    android:id="@+id/kills"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@sample/usergames.json/userGames/playerKill" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/assistants_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/assistants_title" />

                <TextView
                    android:id="@+id/assistants"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@sample/usergames.json/userGames/playerAssistant" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/hunter_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hunter_title" />

                <TextView
                    android:id="@+id/hunter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@sample/usergames.json/userGames/monsterKill" />

            </LinearLayout>

            <!--            <LinearLayout-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginStart="8dp"-->
            <!--                android:gravity="center"-->
            <!--                android:orientation="vertical">-->

            <!--                <TextView-->
            <!--                    android:id="@+id/mmr_title"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:text="MMR" />-->

            <!--                <TextView-->
            <!--                    android:id="@+id/mmr"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    tools:text="@sample/usergames.json/userGames/mmrBefore" />-->

            <!--            </LinearLayout>-->

        </LinearLayout>

        <LinearLayout
            android:id="@+id/items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/common"
            app:layout_constraintStart_toStartOf="@+id/common"
            app:layout_constraintTop_toBottomOf="@+id/avatar">

            <ImageView
                android:id="@+id/item1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/first_item"
                tools:srcCompat="@tools:sample/avatars" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/loading_item1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_weight="1"
                android:visibility="gone"

                app:shimmer_auto_start="true"
                app:shimmer_colored="false">

                <com.google.android.material.imageview.ShapeableImageView
                    style="@style/Theme.ERBSStats.Loading"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:shapeAppearanceOverlay="@style/Theme.ERBSStats.ShapeAppearanceOverlay.Shimmer.All"
                    app:strokeColor="@color/goldenrod" />

            </com.facebook.shimmer.ShimmerFrameLayout>

            <ImageView
                android:id="@+id/item2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:contentDescription="@string/second_item"
                tools:srcCompat="@tools:sample/avatars" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/loading_item2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_weight="1"
                android:visibility="gone"

                app:shimmer_auto_start="true"
                app:shimmer_colored="false">

                <com.google.android.material.imageview.ShapeableImageView
                    style="@style/Theme.ERBSStats.Loading"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:shapeAppearanceOverlay="@style/Theme.ERBSStats.ShapeAppearanceOverlay.Shimmer.All"
                    app:strokeColor="@color/goldenrod" />

            </com.facebook.shimmer.ShimmerFrameLayout>

            <ImageView
                android:id="@+id/item3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:contentDescription="@string/third_item"
                tools:srcCompat="@tools:sample/avatars" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/loading_item3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_weight="1"
                android:visibility="gone"

                app:shimmer_auto_start="true"
                app:shimmer_colored="false">

                <com.google.android.material.imageview.ShapeableImageView
                    style="@style/Theme.ERBSStats.Loading"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:shapeAppearanceOverlay="@style/Theme.ERBSStats.ShapeAppearanceOverlay.Shimmer.All"
                    app:strokeColor="@color/goldenrod" />

            </com.facebook.shimmer.ShimmerFrameLayout>

            <ImageView
                android:id="@+id/item4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:contentDescription="@string/fourth_subject"
                tools:srcCompat="@tools:sample/avatars" />


            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/loading_item4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_weight="1"
                android:visibility="gone"

                app:shimmer_auto_start="true"
                app:shimmer_colored="false">

                <com.google.android.material.imageview.ShapeableImageView
                    style="@style/Theme.ERBSStats.Loading"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:shapeAppearanceOverlay="@style/Theme.ERBSStats.ShapeAppearanceOverlay.Shimmer.All"
                    app:strokeColor="@color/goldenrod" />

            </com.facebook.shimmer.ShimmerFrameLayout>

            <ImageView
                android:id="@+id/item5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:contentDescription="@string/fifth_subject"
                tools:srcCompat="@tools:sample/avatars" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/loading_item5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_weight="1"
                android:visibility="gone"

                app:shimmer_auto_start="true"
                app:shimmer_colored="false">

                <com.google.android.material.imageview.ShapeableImageView
                    style="@style/Theme.ERBSStats.Loading"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:shapeAppearanceOverlay="@style/Theme.ERBSStats.ShapeAppearanceOverlay.Shimmer.All"
                    app:strokeColor="@color/goldenrod" />

            </com.facebook.shimmer.ShimmerFrameLayout>

            <ImageView
                android:id="@+id/item6"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:contentDescription="@string/sixth_subject"
                tools:srcCompat="@tools:sample/avatars" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/loading_item6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_weight="1"
                android:visibility="gone"

                app:shimmer_auto_start="true"
                app:shimmer_colored="false">

                <com.google.android.material.imageview.ShapeableImageView
                    style="@style/Theme.ERBSStats.Loading"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:shapeAppearanceOverlay="@style/Theme.ERBSStats.ShapeAppearanceOverlay.Shimmer.All"
                    app:strokeColor="@color/goldenrod" />

            </com.facebook.shimmer.ShimmerFrameLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>